--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   </head>
 <body>
 
+  <div class="container" id="buttons" >
+    <button type="button" class="btn btn-danger">About</button>
+    <button type="button" class="btn btn-secondary">Post</button>
+    <button type="button" class="btn btn-warning">Sign in</button>
+</div class="containter">
+
+
   <div>
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
   <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
