--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@ src="http://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 
-
 </head>
 <body>
-
 
   <div class="container" id="buttons" >
         <button type="button" class="btn btn-danger">About</button>
@@ -24,44 +22,24 @@ crossorigin="anonymous"></script>
     </div class="containter">
 
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
 <div>
   <h1>Creative Guild</h1>
     </div>
 
+<div class="container" id="title">
+    <img src="tittle.png" alt="Creative Guild" width="400px">
+      </div>
 
 
+<div class="container" id="Q">
+  <img src="writers quote.jpeg" alt="Writers quotes" width="400px">
+    </div>
 
-
-
-
-    <div class="container" id="SM">
-      <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
-        <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-          <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
-        </div>
-
+<div class="container" id="SM">
+  <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
+    <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+      <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+    </div>
 
 
 
