--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@ crossorigin="anonymous"></script>
         <button type="button" class="btn btn-danger">About</button>
         <button type="button" class="btn btn-secondary">Post</button>
         <button type="button" class="btn btn-danger">Submit</button>
-    </div class="containter">
+      </div class="containter" id="buttons">
 
 
-<div>
-  <h1>Creative Guild</h1>
-    </div>
+<div class="container" id="searchbar">
+  <input type="text" name="search" placeholder="Search..">
+    </div class="container" id="searchbar">
+
 
 <div class="container" id="title">
     <img src="tittle.png" alt="Creative Guild" width="400px">
-      </div>
+  </div class="containter" id="title">
 
 
 <div class="container" id="Q">
   <img src="writers quote.jpeg" alt="Writers quotes" width="400px">
-    </div>
+    </div class="container" id="Q">
 
 <div class="container" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
-    </div>
-
+        </div class="container" id="SM">
 
 
   <script src="js/script.js"></script>
