--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@ crossorigin="anonymous"></script>
       </div class="containter" id="buttons">
 
 
-<div class="container" id="searchbar">
+<div class="container" id="sb">
   <input type="text" name="search" placeholder="Search..">
-    </div class="container" id="searchbar">
+</div class="container" id="sb">
 
 
 <div class="container" id="title">
-    <img src="tittle.png" alt="Creative Guild" width="400px">
+    <img src="tittle.jpeg" alt="Creative Guild" width="600px">
   </div class="containter" id="title">
+
+  <div class="container" id="logo">
+      <img src="logo" alt="Creative Guild" width="600px">
+    </div class="containter" id="title">
 
 
 <div class="container" id="Q">
