--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@ crossorigin="anonymous"></script>
 </div class="container" id="sb">
 
 
-<div class="container" id="title">
-    <img src="tittle.jpeg" alt="Creative Guild" width="600px">
-  </div class="containter" id="title">
+<div class="container" id="comic">
+  <img src="dt.jpg" alt="writer comic" width="150px">
+    </div class="container" id="Q">
 
-  <div class="container" id="logo">
-      <img src="logo" alt="Creative Guild" width="600px">
-    </div class="containter" id="title">
+
+          <div class="container" id="title">
+              <img src="tl.jpg" alt="Creative Guild" width="600px">
+                </div class="containter" id="title">
+
+
 
 
 <div class="container" id="Q">
-  <img src="writers quote.jpeg" alt="Writers quotes" width="400px">
+  <img src="writers quote.jpeg" alt="Writers quotes" width="600px">
     </div class="container" id="Q">
 
 <div class="container" id="SM">
