--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ crossorigin="anonymous"></script>
 <body>
 
   <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger">About</button>
-        <button type="button" class="btn btn-secondary">Post</button>
-        <button type="button" class="btn btn-danger">Submit</button>
+        <button type="button1" class="btn btn-danger">About</button>
+        <button type="button2" class="btn btn-secondary">Post</button>
+        <button type="button3" class="btn btn-danger">Submit</button>
       </div class="containter" id="buttons">
 
 
@@ -26,22 +26,18 @@ crossorigin="anonymous"></script>
   <input type="text" name="search" placeholder="Search..">
 </div class="container" id="sb">
 
+<div class="row">
+  <div class="column">
+    <img src="dt.jpg" id="comic" alt="writer comic" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
+  </div>
+</div>
 
-<div class="container" id="comic">
-  <img src="dt.jpg" alt="writer comic" width="150px">
-    </div class="container" id="Q">
-
-
-          <div class="container" id="title">
-              <img src="tl.jpg" alt="Creative Guild" width="600px">
-                </div class="containter" id="title">
-
-
-
-
-<div class="container" id="Q">
-  <img src="writers quote.jpeg" alt="Writers quotes" width="600px">
-    </div class="container" id="Q">
 
 <div class="container" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
