--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ crossorigin="anonymous"></script>
 <body>
 
   <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger">About</button>
+        <button type="button" class="btn btn-danger" herf="about.html">About</button>
         <button type="button" class="btn btn-secondary">Post</button>
         <button type="button" class="btn btn-danger">Submit</button>
       </div class="containter" id="buttons">
