--- a/index.html
+++ b/index.html
@@ -15,21 +15,12 @@ crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <div class="container" id="buttons" >
-        <button type="button1" class="btn btn-danger">About</button>
-        <button type="button2" class="btn btn-secondary">Post</button>
-        <button type="button3" class="btn btn-danger">Submit</button>
-      </div class="containter" id="buttons">
-
 
 <div class="container" id="sb">
   <input type="text" name="search" placeholder="Search..">
 </div class="container" id="sb">
 
 <div class="row">
-  <div class="column">
-    <img src="dt.jpg" id="comic" alt="writer comic" style="width:100%">
-  </div>
   <div class="column">
     <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
   </div>
@@ -38,6 +29,36 @@ crossorigin="anonymous"></script>
   </div>
 </div>
 
+<div class="row">
+  <div class="column">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="pussinboots.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="RainbowDragon.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </div>
+</div>
+
+    <br>
 
 <div class="container" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
