--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ crossorigin="anonymous"></script>
 <body>
 
   <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger" herf="about.html">About</button>
+        <button type="button" class="btn btn-danger">About</button>
         <button type="button" class="btn btn-secondary">Post</button>
         <button type="button" class="btn btn-danger">Submit</button>
       </div class="containter" id="buttons">
@@ -41,11 +41,23 @@ crossorigin="anonymous"></script>
   <img src="writers quote.jpeg" alt="Writers quotes" width="600px">
     </div class="container" id="Q">
 
+
+
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+    
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+
 <div class="container" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
         </div class="container" id="SM">
+
+
+
 
 
   <script src="js/script.js"></script>
