--- a/submit.html
+++ b/submit.html
@@ -18,6 +18,10 @@
     </div class="containter">
 
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
    <div>
               <form action="/action_page.php">
               <legend>Sign in</legend>
