--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ crossorigin="anonymous"></script>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="pussinboots.jpg" class="d-block w-100" alt="...">
+      <img src="fc.jpeg" class="d-block w-100" alt="featured comic">
     </div>
     <div class="carousel-item">
-      <img src="RainbowDragon.jpg" class="d-block w-100" alt="...">
+      <img src="dt1.jpg" class="d-block w-100" alt="debbie tung comic part two">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="dt3" class="d-block w-100" alt="debbie tung comic part one">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -62,7 +62,7 @@ crossorigin="anonymous"></script>
 
 
 
-      
+
 
 
 
