--- a/about.html
+++ b/about.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 
-
   <title> Creative Guild </title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet"
+href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script
+src="https://code.jquery.com/jquery-3.4.1.min.js"
+integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+crossorigin="anonymous"></script>
+
 </head>
 <body>
-
-  <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger">About</button>
-        <button type="button" class="btn btn-secondary">Post</button>
-        <button type="button" class="btn btn-danger">Submit</button>
-    </div class="containter">
 
 
 
