--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,19 @@
 <!doctype>
 <html>
 <head>
-
-
   <title> Creative Guild </title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+    <link rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 </head>
 <body>
 
-
-  <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger">About</button>
-        <button type="button" class="btn btn-secondary">Post</button>
-        <button type="button" class="btn btn-danger">Submit</button>
-    </div class="containter">
 
 
 
@@ -35,7 +34,7 @@
       <input type="submit" value="Submit">
 
     </form>
-    
+
     </div class="containter">
 
 
