--- a/submit.html
+++ b/submit.html
@@ -2,23 +2,20 @@
 <!doctype>
 <html>
 <head>
-
-
   <title> Creative Guild </title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+    <link rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
 </head>
 <body>
 
-
-  <div class="container" id="buttons" >
-        <button type="button" class="btn btn-danger">About</button>
-        <button type="button" class="btn btn-secondary">Post</button>
-        <button type="button" class="btn btn-danger">Submit</button>
-    </div class="containter">
-
-
-  
    <div>
               <form action="/action_page.php">
               <legend>Sign in</legend>
@@ -53,7 +50,9 @@
       </div>
 
 
-
+      <div class="file-upload-wrapper">
+        <input type="file" id="input-file-now" class="file-upload" />
+      </div>
 
 
   <div class="container" id="SM">
