--- a/index.html
+++ b/index.html
@@ -30,54 +30,46 @@ crossorigin="anonymous"></script>
   </div>
 </div>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div class="row">
+  <div class="column">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
   <div class="carousel-inner">
     <div class="carousel-item active">
-<<<<<<< Updated upstream
-      <img src="pussinboots.jpg" class="d-block w-100" alt="...">
+      <img src="fc.jpeg" class="d-block w-100" alt="featured comic">
     </div>
     <div class="carousel-item">
-      <img src="RainbowDragon.jpg" class="d-block w-100" alt="...">
+      <img src="dt1.jpg" class="d-block w-100" alt="debbie tung comic part two">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-=======
-        <img src="pussinboots.jpg" class="d-block w-100" alt="...">
+      <img src="dt2.jpg" class="d-block w-100" alt="debbie tung comic part one">
     </div>
     <div class="carousel-item">
-      <img src="dt1.jpg" class="d-block w-100" alt="...">
+      <img src="dt3.jpg" class="d-block w-100" alt="debbie tung comic part one">
     </div>
-    <div class="carousel-item">
-      <img src="dt2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="dt3.jpg" class="d-block w-100" alt="...">
->>>>>>> Stashed changes
-    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
   </div>
 </div>
 
- 
-
-
-          <div class="container" id="title">
-              <img src="tl.jpg" alt="Creative Guild" width="600px">
-                </div class="containter" id="title">
-
-<<<<<<< Updated upstream
-
-<div class="container" id="Q">
-  <img src="writers quote.jpeg" alt="Writers quotes" width="600px">
-    </div class="container" id="Q">
 
 
 
 
-=======
->>>>>>> Stashed changes
+
+
+
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
-    
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 
