--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ crossorigin="anonymous"></script>
 
 
 
-
+<IMG SRC="animation1.gif">.
 
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
