--- a/index.html
+++ b/index.html
@@ -30,38 +30,21 @@ crossorigin="anonymous"></script>
   </div>
 </div>
 
-<div class="row">
-  <div class="column">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-<<<<<<< Updated upstream
-      <img src="fc.jpeg" class="d-block w-100" alt="featured comic">
-    </div>
-    <div class="carousel-item">
-      <img src="dt1.jpg" class="d-block w-100" alt="debbie tung comic part two">
-    </div>
-    <div class="carousel-item">
-      <img src="dt2.jpg" class="d-block w-100" alt="debbie tung comic part one">
-    </div>
-    <div class="carousel-item">
-      <img src="dt3.jpg" class="d-block w-100" alt="debbie tung comic part one">
-=======
       <img src="fc.jpeg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="dt1.jpg" class="d-block w-100" alt="...">
+      <img src="dt.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="dt2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="dt3.jpg" class="d-block w-100" alt="...">
-
->>>>>>> Stashed changes
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -71,22 +54,14 @@ crossorigin="anonymous"></script>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </div>
+  </a>
 </div>
-
-<<<<<<< Updated upstream
-
-
-
-
-=======
-
 
 
   <div class="container" id="Q">
     <img src="writers quote.jpeg" alt="Writers quotes" width="600px">
   </div class="container" id="Q">
->>>>>>> Stashed changes
+
 
 
 
