--- a/index.html
+++ b/index.html
@@ -61,10 +61,24 @@ crossorigin="anonymous"></script>
 
 
 
-
-
 <IMG SRC="animation1.gif">.
 
+
+<div class="containter" id="about">
+  <img src="waw" alt="..." style="width:100%">
+</div>
+
+<div class="containter" id="competition">
+  <img src="tog" alt="..." style="width:100%">
+</div>
+
+<div class="containter" id="contact">
+  <img src="samb" alt="..." style="width:100%">
+</div>
+
+<div class="containter" id="submit">
+  <img src="syp" alt="..." style="width:100%">
+</div>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
