covered google sign in for now
covered google sign in for now

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ crossorigin="anonymous"></script>
   <img src="syp" alt="..." style="width:100%">
 </div>
 
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 
 
 <div class="container" id="SM">
