fixed jpeg image issue
added .jpeg

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@ crossorigin="anonymous"></script>
 
 
 <div class="containter" id="about">
-  <img src="waw" alt="..." style="width:100%">
+  <img src="waw.jpeg" alt="..." style="width:100%">
 </div>
 
 <div class="containter" id="competition">
-  <img src="tog" alt="..." style="width:100%">
+  <img src="tog.jpeg" alt="..." style="width:100%">
 </div>
 
 <div class="containter" id="contact">
-  <img src="samb" alt="..." style="width:100%">
+  <img src="samb.jpeg" alt="..." style="width:100%">
 </div>
 
 <div class="containter" id="submit">
-  <img src="syp" alt="..." style="width:100%">
+  <img src="syp.jpeg" alt="..." style="width:100%">
 </div>
 
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
