added gif image
added dragon gif

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ crossorigin="anonymous"></script>
 
 
 
-<IMG SRC="animation1.gif">.
+<IMG SRC="dgif.gif">.
 
 
 <div class="containter" id="about">
