--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ crossorigin="anonymous"></script>
 
 <div class="row">
   <div class="column">
+    <div class="carousel">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -56,14 +57,14 @@ crossorigin="anonymous"></script>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </div>
-</div>
+  </div class="carousel">
+</div class="column">
+</div class="row">
 
 
 
-<IMG SRC="dgif.gif">.
 
-
+<!--
 <div class="containter" id="about">
   <img src="waw.jpeg" alt="..." style="width:100%">
 </div>
@@ -78,12 +79,17 @@ crossorigin="anonymous"></script>
 
 <div class="containter" id="submit">
   <img src="syp.jpeg" alt="..." style="width:100%">
-</div>
+</div> -->
 
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+
+
+    <div class="center" id="gif">
+      <IMG SRC="dgif.gif" align:"right" style= "width:75%">
+    </div>
 
 
 <div class="container" id="SM">
