--- a/submit.html
+++ b/submit.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-   <div>
+   <div class="container" id="sign in">
               <form action="/action_page.php">
               <legend>Sign in</legend>
         <form>
