--- a/index.html
+++ b/index.html
@@ -16,22 +16,33 @@ crossorigin="anonymous"></script>
 <body>
 
 
-<div class="container" id="sb">
+<div class="row justify-content-center" id="sb">
   <input type="text" name="search" placeholder="Search..">
-</div class="container" id="sb">
+</div>
 
 
-<div class="row">
-  <div class="column">
+<div class="row justify-content-center">
+  <div class="col-sm-4">
     <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
   </div>
-  <div class="column">
+  <div class="row justify-content-around"
+  <div class="col-8">
     <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
   </div>
 </div>
 
-<div class="row">
-  <div class="column">
+
+<br>
+
+
+<div class="row justify-content-start" id="gif">
+      <IMG SRC="dgif.gif" align:"right" style= "width:75%">
+    </div>
+
+
+
+<div class="row-justify-content-end">
+  <div class="col-12">
     <div class="carousel">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -87,16 +98,14 @@ crossorigin="anonymous"></script>
     <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 
 
-    <div class="center" id="gif">
-      <IMG SRC="dgif.gif" align:"right" style= "width:75%">
-    </div>
 
 
-<div class="container" id="SM">
+<div class="row justify-content-end" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
-        </div class="container" id="SM">
+        </div>
+
 
 
 
