continued image correction
justified content

--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@ crossorigin="anonymous"></script>
 
 
 <br>
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class:"row">
+  <div class="col-md-4 offset-md-0">
 <div class="row justify-content-start" id="gif">
       <IMG SRC="dgif.gif" align:"right" style= "width:75%">
     </div>
+  </div>
 
-
-
+<div class="col-md-5 offset-md-0">
 <div class="row-justify-content-end">
   <div class="col-12">
     <div class="carousel">
@@ -52,7 +57,7 @@ crossorigin="anonymous"></script>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="fc.jpeg" class="d-block w-100" alt="featured comic">
+      <img src="fc.jpeg" class="d-block w-100" alt="featured comic" style:"width=50%">
     </div>
     <div class="carousel-item">
       <img src="dt1.jpg" class="d-block w-100" alt="debbie tung comic part two">
@@ -71,7 +76,8 @@ crossorigin="anonymous"></script>
   </div class="carousel">
 </div class="column">
 </div class="row">
-
+<div>
+</div>
 
 
 
@@ -99,7 +105,11 @@ crossorigin="anonymous"></script>
 
 
 
-
+<br>
+<br>
+<br>
+<div class="row">
+  <div class="column"
 <div class="row justify-content-end" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
