--- a/submit.html
+++ b/submit.html
@@ -16,44 +16,20 @@
 </head>
 <body>
 
-   <div class="container" id="sign in">
-              <form action="/action_page.php">
-              <legend>Sign in</legend>
-        <form>
-          User name:<br>
-          <input type="text" name="username"><br>
-          User password:<br>
-          <input type="password" name="psw">
-        </form>
 
-    </div>
-
-
-    <div>
-          <form action="/action_page.php">
-          <legend>Personal information:</legend>
-            First name:<br>
-          <input type="text" name="firstname"><br>
-            Last name:<br>
-          <input type="text" name="lastname">
-          <br> <br>
-
-
-          <textarea name="message" rows="10" cols="30">
-            Write your story here
-          </textarea>
-
-    <input type="submit" value="Submit">
-        </form>
-
-
+      <div class="row justify-content-center">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0nj2K8d2yhiFk2_z9ngbjJdjfcw7oQgBJDdquTy00bsj1_Q/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
-
-      <div class="file-upload-wrapper">
+      <!-- <div class="file-upload-wrapper">
         <input type="file" id="input-file-now" class="file-upload" />
       </div>
+ -->
 
+
+      <div class="row justify-content-center">
+      <a class="btn btn-danger" href="https://forms.gle/7ofzhLmzuoACBP9m6" role="button">Upload file here</a>
+      </div>
 
   <div class="container" id="SM">
     <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
