--- a/contact.html
+++ b/contact.html
@@ -14,29 +14,13 @@
 </head>
 <body>
 
+<div class="row justify-content-center">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfadae8s6cIKUQsxCXbbbpWzrJqlCSIhma5u3IzRlzuy37FIg/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
 
-
-
-
-  <h1> Contact </h1>
-  <div class="container">
-    <form action="action_page.php">
-
-      <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-      <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-      <input type="submit" value="Submit">
-
-    </form>
-
-    </div class="containter">
-
+<br>
+<br>
+<br>
 
 
 
