--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@ crossorigin="anonymous"></script>
   <div class="col-sm-4">
     <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
   </div>
-  <div class="row justify-content-around"
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="row"
   <div class="col-8">
     <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
   </div>
 </div>
-
 
 <br>
 <br>
