attempt to fix carasol
added active class

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@ crossorigin="anonymous"></script>
 <body>
 
 
-<div class="row justify-content-center" id="sb">
-  <input type="text" name="search" placeholder="Search..">
-</div>
-
+<br>
+<br>
+<br>
 
 <div class="row justify-content-center">
   <div class="col-sm-4">
@@ -59,8 +58,8 @@ crossorigin="anonymous"></script>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -115,6 +114,8 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
+<br>
+
 <div class="row">
   <div class="column"
 <div class="row justify-content-end" id="SM">
