--- a/gallary.html
+++ b/gallary.html
@@ -14,6 +14,9 @@
 </head>
 <body>
 
+  <div class="row justify-content-center" id="sb">
+    <input type="text" name="search" placeholder="Search..">
+  </div>
 
 
   <script src="js/script.js"></script>
