--- a/index.html
+++ b/index.html
@@ -16,22 +16,19 @@ crossorigin="anonymous"></script>
 <body>
 
 
-<<<<<<< HEAD
 <br>
 <br>
 <br>
-=======
+
 <div class="row justify-content-center" id="sb">
   <input type="text" name="search" placeholder="Search..">
 </div>
 
->>>>>>> parent of 673981f... Carousel images + alt
 
 <div class="row justify-content-center">
   <div class="col-sm-4">
     <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
   </div>
-<<<<<<< HEAD
 
   <br>
   <br>
@@ -40,19 +37,13 @@ crossorigin="anonymous"></script>
   <br>
   <br>
 
-  <div class="row"
-=======
-  <div class="row justify-content-around"
->>>>>>> parent of 673981f... Carousel images + alt
+  <div class="row">
+  <div class="row justify-content-around">
   <div class="col-8">
     <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
   </div>
 </div>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> parent of 673981f... Carousel images + alt
 <br>
 <br>
 <br>
@@ -72,14 +63,6 @@ crossorigin="anonymous"></script>
     <div class="carousel">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-<<<<<<< HEAD
-    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-=======
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
->>>>>>> parent of 673981f... Carousel images + alt
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -134,11 +117,9 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
-<<<<<<< HEAD
 <br>
 
-=======
->>>>>>> parent of 673981f... Carousel images + alt
+
 <div class="row">
   <div class="column"
 <div class="row justify-content-end" id="SM">
