--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 
-<div class="row justify-content-center" id="sb">
-  <input type="text" name="search" placeholder="Search..">
-</div>
-
-
 <div class="row justify-content-center">
   <div class="col-sm-4">
     <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
@@ -37,7 +32,6 @@ crossorigin="anonymous"></script>
   <br>
   <br>
 
-  <div class="row">
   <div class="row justify-content-around">
   <div class="col-8">
     <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
@@ -121,12 +115,14 @@ crossorigin="anonymous"></script>
 
 
 <div class="row">
-  <div class="column"
+  <div class="column">
 <div class="row justify-content-end" id="SM">
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
         </div>
+      </div>
+    </div>
 
 
 
