--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
 <div class:"row">
-  <div class="col-md-4 offset-md-0">
+  <div class="col-md-8 offset-md-0">
 <div class="row justify-content-start" id="gif">
       <IMG SRC="dgif.gif" align:"right" style= "width:75%">
     </div>
   </div>
 
-<div class="col-md-5 offset-md-0">
+
+<br>
+<br>
+<br>
+<br>
+<div class="col-md-9 offset-md-0">
 <div class="row-justify-content-end">
   <div class="col-12">
     <div class="carousel">
@@ -111,20 +113,18 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
-<br>
 
-
+<div class="containter">
 <div class="row">
-  <div class="column">
-<div class="row justify-content-end" id="SM">
+  <div class="col-sm-4">
+<!-- <div class="row justify-content-end" id="SM"> -->
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
         </div>
       </div>
     </div>
-
-
+  </div>
 
 
 
