--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@ crossorigin="anonymous"></script>
   </div>
 </div>
 
+
+
 <br>
 <br>
 <br>
 <div class:"row">
-  <div class="col-md-8 offset-md-0">
+  <div class="col-sm-8 offset-md-0">
 <div class="row justify-content-start" id="gif">
       <IMG SRC="dgif.gif" align:"right" style= "width:75%">
     </div>
   </div>
+
 
 
 <br>
@@ -62,7 +65,7 @@ crossorigin="anonymous"></script>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="fc.jpeg" class="d-block w-100" alt="featured comic" style:"width=50%">
+      <img src="fc.jpeg" class="d-block w-100" alt="featured comic" style:"width=100%">
     </div>
     <div class="carousel-item">
       <img src="dt1.jpg" class="d-block w-100" alt="debbie tung comic part two">
@@ -113,18 +116,19 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
 
 <div class="containter">
-<div class="row">
-  <div class="col-sm-4">
+<div class="row justify-content-end">
 <!-- <div class="row justify-content-end" id="SM"> -->
   <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
     <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
         </div>
       </div>
-    </div>
-  </div>
+    
 
 
 
