--- a/gallary.html
+++ b/gallary.html
@@ -21,10 +21,10 @@
 
 
 
-  <div class="grid">
+<div class="grid">
 
-    <div class="item">
-      <div class="item-content">
+  <div class="item">
+    <div class="item-content">
         <!-- Safe zone, enter your custom markup -->
         This can be anything.
         <!-- Safe zone ends -->
@@ -101,7 +101,7 @@
 
   <div class="col-md-9 offset-md-0">
     <div class="row">
-      <div class="item">
+      <div class="item2">
         <div class="item-content">
           <!-- Safe zone, enter your custom markup -->
           <div class="my-custom-content">
@@ -117,7 +117,7 @@
 
   <div class="col-md-9 offset-md-0">
     <div class="row">
-      <div class="item">
+      <div class="item3">
         <div class="item-content">
           <!-- Safe zone, enter your custom markup -->
           <div class="my-custom-content">
