--- a/about.html
+++ b/about.html
@@ -44,13 +44,34 @@ crossorigin="anonymous"></script>
         Find a home away from home at Keele Creative writing society!"" </p>
       </div id="intro">
 
+<div class="col-md-12">
+      <div class="row justify-content-center" id="gif">
+            <IMG SRC="rd.gif" align:"right" style= "width:65%">
+          </div>
+        </div>
 
-
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+<div class="container">
+<div class="row justify-content-end">
   <div class="container" id="SM">
     <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
       <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
         <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
       </div>
+    </div>
+    </div>
 
 
 
