--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ crossorigin="anonymous"></script>
       <IMG SRC="dgif.gif" align:"right" style= "width:75%">
     </div>
   </div>
+</div>
 
 
 
@@ -128,7 +129,7 @@ crossorigin="anonymous"></script>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
         </div>
       </div>
-    
+
 
 
 
