nav buttons added
nav buttons added

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
-<div class:"row">
+
   <div class="col-sm-8 offset-md-0">
 <div class="row justify-content-start" id="gif">
       <IMG SRC="dgif.gif" align:"right" style= "width:75%">
     </div>
   </div>
-</div>
+
 
 
 
@@ -111,6 +111,23 @@ crossorigin="anonymous"></script>
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+
+<div class="row">
+  <div class="nav">
+    <a href="https://ikrat101.github.io/CG/about"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
+
+
+    <a href="https://ikrat101.github.io/CG/contact"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
+
+    <a href="https://ikrat101.github.io/CG/submit"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
+
+    <a href="https://ikrat101.github.io/CG/competition"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
+
+    <!-- <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="  "></a> -->
+
+    <a href="https://ikrat101.github.io/CG/gallary"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
+
+
 
 
 
