--- a/gallary.html
+++ b/gallary.html
@@ -115,20 +115,19 @@
   </div>
 
 
-  <div class="col-md-9 offset-md-0">
+  <!-- <div class="col-md-9 offset-md-0">
     <div class="row">
       <div class="item3">
         <div class="item-content">
-          <!-- Safe zone, enter your custom markup -->
           <div class="my-custom-content">
 
             this one too
           </div>
-          <!-- Safe zone ends -->
+
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 </div>
   <script src="js/script.js"></script>
