--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@ crossorigin="anonymous"></script>
 
 <div class="row">
   <div class="nav">
-    <a href="https://ikrat101.github.io/CG/about"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
+    <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
 
 
-    <a href="https://ikrat101.github.io/CG/contact"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
+    <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
 
-    <a href="https://ikrat101.github.io/CG/submit"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
+    <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
 
-    <a href="https://ikrat101.github.io/CG/competition"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
+    <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
 
     <!-- <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="  "></a> -->
 
-    <a href="https://ikrat101.github.io/CG/gallary"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
+    <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
 
 
 
