--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <script>
+  function myfunction() {
+    alert("Click the buttons above the books to lead you to the pages")
+  }
+  </script>
   <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
@@ -9,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body onload="myfunction()">
 
 
 <div class="container" id="sb">
