--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ crossorigin="anonymous"></script>
 <br>
 <br>
 <br>
-<div class="col-md-9 offset-md-0">
+<!-- <div class="col-md-9 offset-md-0">
 <div class="row-justify-content-end">
   <div class="col-12">
     <div class="carousel">
@@ -86,7 +86,7 @@ crossorigin="anonymous"></script>
 </div class="column">
 </div class="row">
 <div>
-</div>
+</div> -->
 
 
 
