--- a/documentTemplate.html
+++ b/documentTemplate.html
@@ -22,9 +22,14 @@
 
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
-
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
 
 <h1><strong> Story tittle </strong></h1>
+
+<br>
+<br>
+<Br>
 
   <P1> Once upon a time </P1>
 
@@ -33,6 +38,13 @@
 <br>
 <br>
 <br>
+
+
+
+
+
+
+<div class="fb-comments" data-href="https://ikrat101.github.io/CG/documentTemplate" data-width="" data-numposts="5"></div>
 
 <div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
 
