--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body onload="myFunction()">
 
 
 <br>
