--- a/index.html
+++ b/index.html
@@ -1,62 +1,59 @@
 <!doctype>
 <html>
-<head>
-  <title> Creative Guild </title>
+  <head>
+    <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script
-src="https://code.jquery.com/jquery-3.4.1.min.js"
-integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-crossorigin="anonymous"></script>
-
-</head>
-<body onload="myFunction()">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+    </script>
+  </head>
+  <body onload="myFunction()">
 
 
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
 
-<div class="row justify-content-center">
-  <div class="col-sm-4">
-    <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
-  </div>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div class="row justify-content-around">
-  <div class="col-8">
-    <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
-  </div>
-</div>
-
-
-
-<br>
-<br>
-<br>
-
-  <div class="col-sm-8 offset-md-0">
-<div class="row justify-content-start" id="gif">
-      <IMG SRC="dgif.gif" align:"right" style= "width:75%">
+    <div class="row justify-content-center">
+      <div class="col-sm-4">
+        <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
+      </div>
     </div>
-  </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="row justify-content-around">
+      <div class="col-8">
+        <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
+      </div>
+    </div>
+
+
+
+    <br>
+    <br>
+    <br>
+
+    <div class="col-sm-8 offset-md-0">
+      <div class="row justify-content-start" id="gif">
+        <IMG SRC="dgif.gif" align:"right" style= "width:75%">
+      </div>
+    </div>
 
 
 
 
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <br>
 <!-- <div class="col-md-9 offset-md-0">
 <div class="row-justify-content-end">
   <div class="col-12">
@@ -112,46 +109,49 @@ crossorigin="anonymous"></script>
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 
-<div class="row">
-  <div class="nav">
-    <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
+    <div class="row">
+      <div class="nav">
+        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
 
 
-    <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
+        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
 
-    <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
+        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
 
-    <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
+        <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
 
     <!-- <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="  "></a> -->
 
-    <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
-
-
-
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="containter">
-<div class="row justify-content-end">
-<!-- <div class="row justify-content-end" id="SM"> -->
-  <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
-    <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-      <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
-        </div>
+        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
       </div>
+    </div>
 
 
 
 
 
-  <script src="js/script.js"></script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-</body>
+    <div class="containter">
+      <div class="row justify-content-end">
+<!-- <div class="row justify-content-end" id="SM"> -->
+        <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
+        <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+        <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+      </div>
+    </div>
+
+
+
+
+
+    <script src="js/script.js">
+    </script>
+
+  </body>
 </html>
