rearanging placement of index
rearanging placement of text

--- a/gallary.html
+++ b/gallary.html
@@ -103,7 +103,7 @@
     <div class="row">
       <div class="item2">
         <div class="item-content">
-          <!-- Safe zone, enter your custom markup -->
+          <div class="competition" id="competition">   <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="ch.jpg" style= "width:20%"></a>
           <div class="my-custom-content">
 
           coming soon
