--- a/index.html
+++ b/index.html
@@ -12,48 +12,20 @@
   <body onload="myFunction()">
 
 
-    <br>
-    <br>
-    <br>
+        <div class="CG" id="CG">
+          <img src="tl.jpg" id="title" alt="Creative Guild" style="width:40%">
+        </div>
+        <div class="wq" id="wq">
+          <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:40%">
+        </div>
 
-    <div class="row justify-content-center">
-      <div class="col-sm-4">
-        <img src="tl.jpg" id="title" alt="Creative Guild" style="width:100%">
+
+
+      <div class="row" id="gif">
+        <IMG SRC="dgif.gif" align:"right" style= "width:15%">
       </div>
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div class="row justify-content-around">
-      <div class="col-8">
-        <img src="writers quote.jpeg" id="Q" alt="Writers quotes" style="width:100%">
-      </div>
-    </div>
 
 
-
-    <br>
-    <br>
-    <br>
-
-    <div class="col-sm-8 offset-md-0">
-      <div class="row justify-content-start" id="gif">
-        <IMG SRC="dgif.gif" align:"right" style= "width:75%">
-      </div>
-    </div>
-
-
-
-
-    <br>
-    <br>
-    <br>
-    <br>
 <!-- <div class="col-md-9 offset-md-0">
 <div class="row-justify-content-end">
   <div class="col-12">
@@ -63,20 +35,22 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 
+
     <div class="row">
-      <div class="nav">
-        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:200%"></a>
-
-
-        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:200%"></a>
-
-        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:200%"></a>
-
-        <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:200%"></a>
-
-        <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="  "></a> 
-
-        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="question about us" src="pf.jpg" style= "width:200%"></a>
+      <div class="about" id="about">
+        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
+</div>
+<div class="mb" id="mb">
+  <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
+</div>
+      <div class="phrop" id="phrop">
+         <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
+</div>
+      <div class="quest" id="quest">
+        <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
+    </div>
+<div class="pf" id="pf" >
+        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
       </div>
     </div>
 
